parser.output
State 10 conflicts: 3 shift/reduce
State 22 conflicts: 1 reduce/reduce
State 23 conflicts: 1 reduce/reduce
State 26 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: Decl DeclList
    3         | Decl

    4 Decl: VarDecl
    5     | StmtList

    6 VarDecl: TYPE ID SEMICOLON

    7 StmtList: Stmt
    8         | Stmt StmtList

    9 Stmt: Expr SEMICOLON

   10 Expr: Addition
   11     | ID EQ ID
   12     | ID EQ NUMBER
   13     | ID EQ Addition
   14     | WRITE ID

   15 Addition: Addition OP Addition
   16         | ID
   17         | NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 6
    ID <string> (259) 6 11 12 13 14 16
    SEMICOLON <char> (260) 6 9
    EQ <char> (261) 11 12 13
    OP <char> (262) 15
    NUMBER <number> (263) 12 17
    WRITE (264) 14


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    Program <ast> (11)
        on left: 1
        on right: 0
    DeclList <ast> (12)
        on left: 2 3
        on right: 1 2
    Decl <ast> (13)
        on left: 4 5
        on right: 2 3
    VarDecl <ast> (14)
        on left: 6
        on right: 4
    StmtList <ast> (15)
        on left: 7 8
        on right: 5 8
    Stmt <ast> (16)
        on left: 9
        on right: 7 8
    Expr <ast> (17)
        on left: 10 11 12 13 14
        on right: 9
    Addition <ast> (18)
        on left: 15 16 17
        on right: 10 13 15


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    ID      shift, and go to state 2
    NUMBER  shift, and go to state 3
    WRITE   shift, and go to state 4

    Program   go to state 5
    DeclList  go to state 6
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr      go to state 11
    Addition  go to state 12


State 1

    6 VarDecl: TYPE . ID SEMICOLON

    ID  shift, and go to state 13


State 2

   11 Expr: ID . EQ ID
   12     | ID . EQ NUMBER
   13     | ID . EQ Addition
   16 Addition: ID .

    EQ  shift, and go to state 14

    $default  reduce using rule 16 (Addition)


State 3

   17 Addition: NUMBER .

    $default  reduce using rule 17 (Addition)


State 4

   14 Expr: WRITE . ID

    ID  shift, and go to state 15


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 6

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


State 7

    2 DeclList: Decl . DeclList
    3         | Decl .

    TYPE    shift, and go to state 1
    ID      shift, and go to state 2
    NUMBER  shift, and go to state 3
    WRITE   shift, and go to state 4

    $default  reduce using rule 3 (DeclList)

    DeclList  go to state 17
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr      go to state 11
    Addition  go to state 12


State 8

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 9

    5 Decl: StmtList .

    $default  reduce using rule 5 (Decl)


State 10

    7 StmtList: Stmt .
    8         | Stmt . StmtList

    ID      shift, and go to state 2
    NUMBER  shift, and go to state 3
    WRITE   shift, and go to state 4

    ID        [reduce using rule 7 (StmtList)]
    NUMBER    [reduce using rule 7 (StmtList)]
    WRITE     [reduce using rule 7 (StmtList)]
    $default  reduce using rule 7 (StmtList)

    StmtList  go to state 18
    Stmt      go to state 10
    Expr      go to state 11
    Addition  go to state 12


State 11

    9 Stmt: Expr . SEMICOLON

    SEMICOLON  shift, and go to state 19


State 12

   10 Expr: Addition .
   15 Addition: Addition . OP Addition

    OP  shift, and go to state 20

    $default  reduce using rule 10 (Expr)


State 13

    6 VarDecl: TYPE ID . SEMICOLON

    SEMICOLON  shift, and go to state 21


State 14

   11 Expr: ID EQ . ID
   12     | ID EQ . NUMBER
   13     | ID EQ . Addition

    ID      shift, and go to state 22
    NUMBER  shift, and go to state 23

    Addition  go to state 24


State 15

   14 Expr: WRITE ID .

    $default  reduce using rule 14 (Expr)


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


State 18

    8 StmtList: Stmt StmtList .

    $default  reduce using rule 8 (StmtList)


State 19

    9 Stmt: Expr SEMICOLON .

    $default  reduce using rule 9 (Stmt)


State 20

   15 Addition: Addition OP . Addition

    ID      shift, and go to state 25
    NUMBER  shift, and go to state 3

    Addition  go to state 26


State 21

    6 VarDecl: TYPE ID SEMICOLON .

    $default  reduce using rule 6 (VarDecl)


State 22

   11 Expr: ID EQ ID .
   16 Addition: ID .

    SEMICOLON  reduce using rule 11 (Expr)
    SEMICOLON  [reduce using rule 16 (Addition)]
    OP         reduce using rule 16 (Addition)
    $default   reduce using rule 11 (Expr)


State 23

   12 Expr: ID EQ NUMBER .
   17 Addition: NUMBER .

    SEMICOLON  reduce using rule 12 (Expr)
    SEMICOLON  [reduce using rule 17 (Addition)]
    OP         reduce using rule 17 (Addition)
    $default   reduce using rule 12 (Expr)


State 24

   13 Expr: ID EQ Addition .
   15 Addition: Addition . OP Addition

    OP  shift, and go to state 20

    $default  reduce using rule 13 (Expr)


State 25

   16 Addition: ID .

    $default  reduce using rule 16 (Addition)


State 26

   15 Addition: Addition . OP Addition
   15         | Addition OP Addition .

    OP  shift, and go to state 20

    OP        [reduce using rule 15 (Addition)]
    $default  reduce using rule 15 (Addition)
